@@ -3,6 +3,7 @@ package io.quarkus.resteasy.reactive.server.deployment;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.HTTP_SERVER_REQUEST;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.HTTP_SERVER_RESPONSE;
 import static io.quarkus.resteasy.reactive.common.deployment.QuarkusResteasyReactiveDotNames.ROUTING_CONTEXT;
+import static io.quarkus.vertx.http.deployment.EagerSecurityInterceptorMethodsBuildItem.collectInterceptedMethods;
 import static java.util.stream.Collectors.toList;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.DATE_FORMAT;
 import static org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames.LEGACY_PUBLISHER;
@@ -56,6 +57,7 @@ import jakarta.ws.rs.ext.WriterInterceptor;
 import org.eclipse.microprofile.config.ConfigProvider;
 import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
+import org.jboss.jandex.AnnotationTransformation;
 import org.jboss.jandex.AnnotationValue;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
@@ -182,6 +184,7 @@ import io.quarkus.resteasy.reactive.server.runtime.security.EagerSecurityContext
 import io.quarkus.resteasy.reactive.server.runtime.security.EagerSecurityHandler;
 import io.quarkus.resteasy.reactive.server.runtime.security.EagerSecurityInterceptorHandler;
 import io.quarkus.resteasy.reactive.server.runtime.security.SecurityContextOverrideHandler;
+import io.quarkus.resteasy.reactive.server.spi.AllowNotRestParametersBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.AnnotationsTransformerBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.ContextTypeBuildItem;
 import io.quarkus.resteasy.reactive.server.spi.HandlerConfigurationProviderBuildItem;
@@ -203,7 +206,7 @@ import io.quarkus.security.AuthenticationCompletionException;
 import io.quarkus.security.AuthenticationFailedException;
 import io.quarkus.security.AuthenticationRedirectException;
 import io.quarkus.security.ForbiddenException;
-import io.quarkus.vertx.http.deployment.EagerSecurityInterceptorBuildItem;
+import io.quarkus.vertx.http.deployment.EagerSecurityInterceptorMethodsBuildItem;
 import io.quarkus.vertx.http.deployment.FilterBuildItem;
 import io.quarkus.vertx.http.deployment.RouteBuildItem;
 import io.quarkus.vertx.http.runtime.HttpBuildTimeConfig;
@@ -412,8 +415,8 @@ public class ResteasyReactiveProcessor {
             List<ContextTypeBuildItem> contextTypeBuildItems,
             CompiledJavaVersionBuildItem compiledJavaVersionBuildItem,
             ResourceInterceptorsBuildItem resourceInterceptorsBuildItem,
-            Capabilities capabilities)
-            throws NoSuchMethodException {
+            Capabilities capabilities,
+            Optional<AllowNotRestParametersBuildItem> allowNotRestParametersBuildItem) {
 
         if (!resourceScanningResultBuildItem.isPresent()) {
             // no detected @Path, bail out
@@ -500,8 +503,7 @@ public class ResteasyReactiveProcessor {
                                         initConverters.getMethodParam(0));
                             }))
                     .setConverterSupplierIndexerExtension(new GeneratedConverterIndexerExtension(
-                            (name) -> new GeneratedClassGizmoAdaptor(generatedClassBuildItemBuildProducer,
-                                    applicationClassPredicate.test(name))))
+                            (name) -> new GeneratedClassGizmoAdaptor(generatedClassBuildItemBuildProducer, true)))
                     .setHasRuntimeConverters(!paramConverterProviders.getParamConverterProviders().isEmpty())
                     .setClassLevelExceptionMappers(
                             classLevelExceptionMappers.isPresent() ? classLevelExceptionMappers.get().getMappers()
@@ -634,6 +636,8 @@ public class ResteasyReactiveProcessor {
                         }
                     });
 
+            serverEndpointIndexerBuilder.skipNotRestParameters(allowNotRestParametersBuildItem.isPresent());
+
             if (!serverDefaultProducesHandlers.isEmpty()) {
                 List<DefaultProducesHandler> handlers = new ArrayList<>(serverDefaultProducesHandlers.size());
                 for (ServerDefaultProducesHandlerBuildItem bi : serverDefaultProducesHandlers) {
@@ -644,11 +648,12 @@ public class ResteasyReactiveProcessor {
             }
 
             if (!annotationTransformerBuildItems.isEmpty()) {
-                List<AnnotationsTransformer> annotationsTransformers = new ArrayList<>(annotationTransformerBuildItems.size());
+                List<AnnotationTransformation> annotationTransformations = new ArrayList<>(
+                        annotationTransformerBuildItems.size());
                 for (AnnotationsTransformerBuildItem bi : annotationTransformerBuildItems) {
-                    annotationsTransformers.add(bi.getAnnotationsTransformer());
+                    annotationTransformations.add(bi.getAnnotationTransformation());
                 }
-                serverEndpointIndexerBuilder.setAnnotationsTransformers(annotationsTransformers);
+                serverEndpointIndexerBuilder.setAnnotationTransformations(annotationTransformations);
             }
 
             serverEndpointIndexerBuilder.setMultipartReturnTypeIndexerExtension(new QuarkusMultipartReturnTypeHandler(
@@ -1278,12 +1283,10 @@ public class ResteasyReactiveProcessor {
             servletPresent = true;
         }
 
-        boolean resumeOn404 = servletPresent || !resumeOn404Items.isEmpty() || config.resumeOn404();
-
         RuntimeValue<Deployment> deployment = recorder.createDeployment(deploymentInfo,
                 beanContainerBuildItem.getValue(), shutdownContext, vertxConfig,
                 requestContextFactoryBuildItem.map(RequestContextFactoryBuildItem::getFactory).orElse(null),
-                initClassFactory, launchModeBuildItem.getLaunchMode(), resumeOn404);
+                initClassFactory, launchModeBuildItem.getLaunchMode(), servletPresent);
 
         quarkusRestDeploymentBuildItemBuildProducer
                 .produce(new ResteasyReactiveDeploymentBuildItem(deployment, deploymentPath));
@@ -1367,9 +1370,13 @@ public class ResteasyReactiveProcessor {
 
     @BuildStep
     @Record(value = ExecutionTime.STATIC_INIT)
-    public FilterBuildItem addDefaultAuthFailureHandler(ResteasyReactiveRecorder recorder) {
+    public FilterBuildItem addDefaultAuthFailureHandler(ResteasyReactiveRecorder recorder,
+            ResteasyReactiveDeploymentBuildItem deployment,
+            Optional<ObservabilityIntegrationBuildItem> observabilityIntegrationBuildItem) {
         // replace default auth failure handler added by vertx-http so that our exception mappers can customize response
-        return new FilterBuildItem(recorder.defaultAuthFailureHandler(), FilterBuildItem.AUTHENTICATION - 1);
+        return new FilterBuildItem(
+                recorder.defaultAuthFailureHandler(deployment.getDeployment(), observabilityIntegrationBuildItem.isPresent()),
+                FilterBuildItem.AUTHENTICATION - 1);
     }
 
     private void checkForDuplicateEndpoint(ResteasyReactiveConfig config, Map<String, List<EndpointConfig>> allMethods) {
@@ -1499,41 +1506,38 @@ public class ResteasyReactiveProcessor {
 
     @BuildStep
     MethodScannerBuildItem integrateEagerSecurity(Capabilities capabilities, CombinedIndexBuildItem indexBuildItem,
-            HttpBuildTimeConfig httpBuildTimeConfig, Optional<EagerSecurityInterceptorBuildItem> eagerSecurityInterceptors,
-            JaxRsSecurityConfig securityConfig) {
+            List<EagerSecurityInterceptorMethodsBuildItem> eagerSecurityInterceptors, JaxRsSecurityConfig securityConfig) {
         if (!capabilities.isPresent(Capability.SECURITY)) {
             return null;
         }
 
-        final boolean applySecurityInterceptors = eagerSecurityInterceptors.isPresent();
-        final boolean denyJaxRs = securityConfig.denyJaxRs();
-        final boolean hasDefaultJaxRsRolesAllowed = !securityConfig.defaultRolesAllowed().orElse(List.of()).isEmpty();
+        final boolean applySecurityInterceptors = !eagerSecurityInterceptors.isEmpty();
+        final var interceptedMethods = applySecurityInterceptors ? collectInterceptedMethods(eagerSecurityInterceptors) : null;
+        final boolean withDefaultSecurityCheck = securityConfig.denyJaxRs()
+                || !securityConfig.defaultRolesAllowed().orElse(List.of()).isEmpty();
         var index = indexBuildItem.getComputingIndex();
         return new MethodScannerBuildItem(new MethodScanner() {
             @Override
             public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
                     Map<String, Object> methodContext) {
-                if (applySecurityInterceptors && eagerSecurityInterceptors.get().applyInterceptorOn(method)) {
-                    // EagerSecurityHandler needs to be present whenever the method requires eager interceptor
-                    // because JAX-RS specific HTTP Security policies are defined by runtime config properties
-                    // for example: when you annotate resource method with @Tenant("hr") you select OIDC tenant,
-                    // so we can't authenticate before the tenant is selected, only after then HTTP perms can be checked
+                if (applySecurityInterceptors && interceptedMethods.contains(method)) {
                     return List.of(EagerSecurityInterceptorHandler.Customizer.newInstance(),
-                            EagerSecurityHandler.Customizer.newInstance(httpBuildTimeConfig.auth.proactive));
+                            EagerSecurityHandler.Customizer.newInstance(false));
                 } else {
-                    if (denyJaxRs || hasDefaultJaxRsRolesAllowed) {
-                        return List.of(EagerSecurityHandler.Customizer.newInstance(httpBuildTimeConfig.auth.proactive));
-                    } else {
-                        return Objects
-                                .requireNonNullElse(
-                                        consumeStandardSecurityAnnotations(method, actualEndpointClass, index,
-                                                (c) -> Collections.singletonList(EagerSecurityHandler.Customizer
-                                                        .newInstance(httpBuildTimeConfig.auth.proactive))),
-                                        Collections.emptyList());
-                    }
+                    return List.of(newEagerSecurityHandlerCustomizerInstance(method, actualEndpointClass, index,
+                            withDefaultSecurityCheck));
                 }
             }
         });
+    }
+
+    private HandlerChainCustomizer newEagerSecurityHandlerCustomizerInstance(MethodInfo method, ClassInfo actualEndpointClass,
+            IndexView index, boolean withDefaultSecurityCheck) {
+        if (withDefaultSecurityCheck
+                || consumeStandardSecurityAnnotations(method, actualEndpointClass, index, (c) -> c) != null) {
+            return EagerSecurityHandler.Customizer.newInstance(false);
+        }
+        return EagerSecurityHandler.Customizer.newInstance(true);
     }
 
     /**
